--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 style="color: blue;">Hola</h1>
     <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse similique blanditiis magnam. In consequuntur eum optio neque repellat necessitatibus delectus, rerum fuga numquam aspernatur fugiat! Sapiente odio numquam at facilis.</p>
-
+<p>no te escucho juan</p>
+<p>ashgdhasgdjahd</p>
 </body>
 </html>
