--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguros</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
     <h1 style="color: blue;">Hola</h1>
     <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse similique blanditiis magnam. In consequuntur eum optio neque repellat necessitatibus delectus, rerum fuga numquam aspernatur fugiat! Sapiente odio numquam at facilis.</p>
 <p>no te escucho juan</p>
-<p>ashgdhasgdjahd</p>
+<p>loumondre@gmail.com</p>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
