--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -18,7 +18,9 @@
       <img src="/Logo.png" alt="Logo" width="auto" height="100">
       <span class="nombre"> Peluca </span>
       <span class="negocio"> Peluqueria Infantil </span>
-      <button class="btn btn-outline-success" type="submit">Reservar Turno</button>
+     <!-- <button class="btn btn-outline-success" type="submit">Reservar Turno</button>-->
+      <a href="Formulario.html" class="btn-form">Reservar Turno</a>
+    
     </a>
   </div>
 </nav>
