--- a/Formulario.html
+++ b/Formulario.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Turno</title>
+    <link rel="stylesheet" href="turno.css">
 </head>
 <body>
-    
+    <h1 class="tituloform"> Reserva tu Turno</h1>
 </body>
 </html>
