--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -41,7 +41,9 @@
 <!--.................Contenido......................-->
  <section class="contenido">
     <h2>Nuestros Servicios</h2>
-    <p>En <strong>Peluca</strong> ofrecemos cortes divertidos, peinados con estilo y una experiencia alegre para los más chicos.</p>
+    <p>En <strong>Peluca</strong> En Peluca, entendemos que para muchos padres el momento del corte puede ser un desafío. Por eso transformamos la experiencia en algo completamente diferente: divertido, amable y sin estrés. Nuestro equipo está especialmente capacitado para atender a los más chicos con paciencia, ternura y una sonrisa, creando un ambiente donde el juego y la creatividad son protagonistas.</p>
+    <p></p>
+    
   </section>
    <div class="cards-container">
 
@@ -73,13 +75,27 @@
       <div class="card-body">
         <p class="card-text"><strong>Primer corte especial</strong></p>
         <p class="card-text">
-          Un servicio pensado para los más pequeños, con certificado, foto recuerdo y toda la ternura que merecen.
+          Un servicio pensado para los más pequeños, con certificado, foto recuerdo y toda la ternura que merecen en su primer corte.
         </p>
       </div>
     </div>
 
   </div>
 </section>
+<!--------------------Promo-------------------------->
+<section class="promo">
+  <div class="promo-content">
+    <div class="promo-text">
+      <h2>🎉 ¡Promo especial de noviembre!</h2>
+      <p><strong>2x1 en cortes infantiles</strong> durante todo el mes. Vení con tu peque y su mejor amigo o hermano ¡y uno de los cortes va por nuestra cuenta!</p>
+      <p class="promo-subtext">Promoción válida hasta el 30 de noviembre. No acumulable con otras ofertas.</p>
+    </div>
+    <div class="promo-image">
+      <img src="promo.png" alt="Niños felices en la peluquería">
+    </div>
+  </div>
+</section>
+
 <!--................................................-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
