--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -98,5 +98,34 @@
 
 <!--................................................-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+<!-- ----- Footer ----- -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-info">
+      <h3>Peluca ✂️</h3>
+      <p>Peluquería infantil con amor, paciencia y mucha diversión.</p>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>📍 Dirección:</strong> Av. Sonrisas 123, Ciudad Feliz</p>
+      <p><strong>📞 Teléfono:</strong> +54 9 11 1234-5678</p>
+      <p><strong>📧 Email:</strong> contacto@peluca.com</p>
+    </div>
+
+    <div class="footer-social">
+      <p>Seguinos en redes</p>
+      <div class="social-icons">
+        <a href="#"><img src="icono-facebook.svg" alt="Facebook"></a>
+        <a href="#"><img src="icono-instagram.svg" alt="Instagram"></a>
+        <a href="#"><img src="icono-tiktok.svg" alt="TikTok"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Peluca. Todos los derechos reservados.</p>
+  </div>
+</footer>
+
+  </body>
 </html>
