--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -17,7 +17,7 @@
  <nav class="navbar bg-body-tertiary">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="/Logo.png" alt="Logo" width="auto" height="120">
+      <img src="/Imagenes&iconos/Logo.png" alt="Logo" width="auto" height="120">
       <span class="nombre"> Peluca </span>
       <span class="negocio"> Peluqueria Infantil </span>
      
@@ -49,7 +49,7 @@
 
     <!-- Tarjeta 1 -->
     <div class="card">
-      <img src="card1.png" class="card-img-top" alt="Corte divertido">
+      <img src="/Imagenes&iconos/card1.png" class="card-img-top" alt="Corte divertido">
       <div class="card-body">
         <p class="card-text"><strong>Corte divertido para niños y niñas</strong></p>
         <p class="card-text">
@@ -60,7 +60,7 @@
 
     <!-- Tarjeta 2 -->
     <div class="card">
-      <img src="card2.png" class="card-img-top" alt="Peinados creativos">
+      <img src="/Imagenes&iconos/card2.png" class="card-img-top" alt="Peinados creativos">
       <div class="card-body">
         <p class="card-text"><strong>Peinados creativos y trenzas mágicas</strong></p>
         <p class="card-text">
@@ -71,7 +71,7 @@
 
     <!-- Tarjeta 3 -->
     <div class="card">
-      <img src="card3.png" class="card-img-top" alt="Primer corte">
+      <img src="/Imagenes&iconos/card3.png" class="card-img-top" alt="Primer corte">
       <div class="card-body">
         <p class="card-text"><strong>Primer corte especial</strong></p>
         <p class="card-text">
@@ -91,7 +91,7 @@
       <p class="promo-subtext">Promoción válida hasta el 30 de noviembre. No acumulable con otras ofertas.</p>
     </div>
     <div class="promo-image">
-      <img src="promo.png" alt="Niños felices en la peluquería">
+      <img src="/Imagenes&iconos/promo.png" alt="Niños felices en la peluquería">
     </div>
   </div>
 </section>
