iconos de redes sociales

--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -115,9 +115,9 @@
     <div class="footer-social">
       <p>Seguinos en redes</p>
       <div class="social-icons">
-        <a href="#"><img src="icono-facebook.svg" alt="Facebook"></a>
-        <a href="#"><img src="icono-instagram.svg" alt="Instagram"></a>
-        <a href="#"><img src="icono-tiktok.svg" alt="TikTok"></a>
+        <a href="#"><img src="/Imagenes&iconos/facebook.svg" alt="Facebook"></a>
+        <a href="#"><img src="/Imagenes&iconos/instagram.svg" alt="Instagram"></a>
+        <a href="#"><img src="/Imagenes&iconos/logo-tiktok.svg" alt="TikTok"></a>
       </div>
     </div>
   </div>
