--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse similique blanditiis magnam. In consequuntur eum optio neque repellat necessitatibus delectus, rerum fuga numquam aspernatur fugiat! Sapiente odio numquam at facilis.</p>
 <p>no te escucho juan</p>
 <p>loumondre@gmail.com</p>
+<a href="Peluqueria.html" class="btn-form" target="_blank">Ir al Formulario</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
