Se arregla ruta de imagenes

--- a/Peluqueria.html
+++ b/Peluqueria.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
   <div class="container d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="#">
-      <img src="/Imagenes&iconos/Logo.png" alt="Logo" width="auto" height="120">
+      <img src="./assets/Logo.png" alt="Logo" width="auto" height="120">
       <span class="nombre"> Peluca </span>
       <span class="negocio"> Peluqueria Infantil </span>     
       <a href="Formulario.html" class="btn-form" target="_blank">Ir al Formulario</a>
@@ -70,7 +70,7 @@
 
     <!-- Tarjeta 1 -->
     <div class="card">
-      <img src="/Imagenes&iconos/card1.png" class="card-img-top" alt="Corte divertido">
+      <img src="./assets/card1.png" class="card-img-top" alt="Corte divertido">
       <div class="card-body">
         <p class="card-text"><strong>Corte divertido para niños y niñas</strong></p>
         <p class="card-text">
@@ -81,7 +81,7 @@
 
     <!-- Tarjeta 2 -->
     <div class="card">
-      <img src="/Imagenes&iconos/card2.png" class="card-img-top" alt="Peinados creativos">
+      <img src="./assets/card2.png" class="card-img-top" alt="Peinados creativos">
       <div class="card-body">
         <p class="card-text"><strong>Peinados creativos y trenzas mágicas</strong></p>
         <p class="card-text">
@@ -92,7 +92,7 @@
 
     <!-- Tarjeta 3 -->
     <div class="card">
-      <img src="/Imagenes&iconos/card3.png" class="card-img-top" alt="Primer corte">
+      <img src="./assets/card3.png" class="card-img-top" alt="Primer corte">
       <div class="card-body">
         <p class="card-text"><strong>Primer corte especial</strong></p>
         <p class="card-text">
@@ -112,7 +112,7 @@
       <p class="promo-subtext">Promoción válida hasta el 30 de noviembre. No acumulable con otras ofertas.</p>
     </div>
     <div class="promo-image">
-      <img src="/Imagenes&iconos/promo.png" alt="Niños felices en la peluquería">
+      <img src="./assets/promo.png" alt="Niños felices en la peluquería">
     </div>
   </div>
 </section>
@@ -136,9 +136,9 @@
     <div class="footer-social">
       <p>Seguinos en redes</p>
       <div class="social-icons">
-        <a href="#"><img src="/Imagenes&iconos/facebook.svg" alt="Facebook"></a>
-        <a href="#"><img src="/Imagenes&iconos/instagram.svg" alt="Instagram"></a>
-        <a href="#"><img src="/Imagenes&iconos/logo-tiktok.svg" alt="TikTok"></a>
+        <a href="#"><img src="./assets/facebook.svg" alt="Facebook"></a>
+        <a href="#"><img src="./assets/instagram.svg" alt="Instagram"></a>
+        <a href="#"><img src="./assets/logo-tiktok.svg" alt="TikTok"></a>
       </div>
     </div>
   </div>
