--- a/index.html
+++ b/index.html
@@ -3,14 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seguros</title>
+    <title>Peluca</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1 style="color: blue;">Hola</h1>
-    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse similique blanditiis magnam. In consequuntur eum optio neque repellat necessitatibus delectus, rerum fuga numquam aspernatur fugiat! Sapiente odio numquam at facilis.</p>
-<p>no te escucho juan</p>
-<p>ashgdhasgdjahd</p>
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-start align-items-center">
+                    <img src="./assets/Logo.png" alt="Logo" width="auto" height="120">
+                    <div class="pt-5">
+                        <p class="nombre"> Peluca </p>
+                        <p class="negocio"> Peluqueria Infantil </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6  text-end d-flex justify-content-end align-items-center mb-3">
+                <a href="Formulario.html" class="btn-form" target="_blank">Ir al Formulario</a>
+            </div>
+        </div>
+    </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light nav-item ">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav mx-auto ">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sucursales</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="preguntasF.html">Preguntas Frecuentes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
