--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <div class="d-flex justify-content-start align-items-center">
-                    <img src="./assets/Logo.png" alt="Logo" width="auto" height="120">
+                    <img src="./assets/Logo1.png" alt="Logo" width="auto" height="120">
                     <div class="pt-5">
                         <p class="nombre"> Peluca </p>
                         <p class="negocio"> Peluqueria Infantil </p>
