--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav mx-auto ">
+            <ul class="navbar-nav mx-auto px-4 px-sm-4 py-4 py-sm-4">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
