--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid ">
         <div class="row">
             <div class="col-12 col-md-6">
                 <div class="d-flex justify-content-start align-items-center">
@@ -59,8 +59,8 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid p-0 m-0">
+        <div class="row m-0 p-0">
             <div class="col-12 p-0">
                 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-inner">
@@ -71,13 +71,16 @@
                             <img src="./assets/carousel2.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel3.jpg" class="d-block w-100 h-60" style="object-fit:cover;" alt="...">
+                            <img src="./assets/carousel3.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
+                                alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel4.jpg" class="d-block w-100 h-60" style="object-fit:cover;" alt="...">
+                            <img src="./assets/carousel4.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
+                                alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel5.jpg" class="d-block w-100 h-60" style="object-fit:cover;" alt="...">
+                            <img src="./assets/carousel5.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
+                                alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
@@ -93,6 +96,33 @@
                 </div>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-info">
+                    <h3>Peluca ✂️</h3>
+                    <p>Peluquería infantil con amor, paciencia y mucha diversión.</p>
+                </div>
+
+                <div class="footer-contact">
+                    <p><strong>📍 Dirección:</strong> Av. Sonrisas 123, Ciudad Feliz</p>
+                    <p><strong>📞 Teléfono:</strong> +54 9 11 1234-5678</p>
+                    <p><strong>📧 Email:</strong> contacto@peluca.com</p>
+                </div>
+
+                <div class="footer-social">
+                    <p>Seguinos en redes</p>
+                    <div class="social-icons">
+                        <a href="#"><img src="./assets/facebook.svg" alt="Facebook"></a>
+                        <a href="#"><img src="./assets/instagram.svg" alt="Instagram"></a>
+                        <a href="#"><img src="./assets/logo-tiktok.svg" alt="TikTok"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>© 2025 Peluca. Todos los derechos reservados.</p>
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
