--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="container-fluid ">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-sm-6">
                 <div class="d-flex justify-content-start align-items-center">
                     <img src="./assets/Logo1.png" alt="Logo" width="auto" height="120">
                     <div class="pt-5">
@@ -25,8 +25,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6  text-end d-flex justify-content-end align-items-center mb-3">
-                <a href="Formulario.html" class="btn-form" target="_blank">Ir al Formulario</a>
+            <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
+                <div class="d-grid gap-2 ">
+                     <a href="Formulario.html" class=" btn-form text-center" target="_blank">Ir al Formulario</a>
+                    
+                </div>
             </div>
         </div>
     </header>
