Se implementa servicios en una ruta nueva

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav mx-auto px-4 px-sm-4 py-4 py-sm-4">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link active" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html">Servicios</a>
@@ -103,100 +103,9 @@
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
 
             <div class="col-11 col-md-6 text-center my-4">
-                <h2 class="titulo-servicios">Nuestros Servicios</h2>
-                <p class="parrafo-servicio">En <strong>Peluca</strong> En Peluca, entendemos que para muchos padres el
-                    momento del corte puede
-                    ser un
-                    desafío. Por eso transformamos la experiencia en algo completamente diferente: divertido, amable y
-                    sin
-                    estrés. Nuestro equipo está especialmente capacitado para atender a los más chicos con paciencia,
-                    ternura y una sonrisa, creando un ambiente donde el juego y la creatividad son protagonistas.</p>
+                <h2 class="titulo-servicios">Promociones</h2>
             </div>
-            <!-- ...................Nuestros Servicios....................... -->
-            <div class="col-12 my-4">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-xl-3 my-4">
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card1.png" class="card-img-top" alt="Corte divertido">
-                            <div class="card-body">
-                                <p class="card-text"><strong>Corte divertido <br> para niños y niñas</strong></p>
-                                <p class="card-text">Cortes modernos o clásicos en un ambiente alegre, con sillitas
-                                    temáticas, dibujos animados y
-                                    juguetes para que cada niño disfrute la experiencia.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card2.png" class="card-img-top" alt="Peinados creativos">
-                            <div class="card-body">
-                                <p class="card-text"><strong>Peinados creativos y trenzas mágicas</strong></p>
-                                <p class="card-text">Trenzas coloridas, moños, purpurina y accesorios divertidos para
-                                    ocasiones especiales o para
-                                    brillar cada día.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card3.png" class="card-img-top" alt="Primer corte">
-                            <div class="card-body">
-                                <p class="card-text"><strong>Primer corte especial</strong></p>
-                                <p class="card-text">
-                                    Un servicio pensado para los más pequeños, con certificado, foto recuerdo y toda la
-                                    ternura
-                                    que merecen en su primer corte.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card4.png" class="card-img-top" alt="Maquillaje Eventos">
-                            <div class="card-body">
-                                <p class="card-text"><strong>Maquillaje para Eventos</strong></p>
-                                <p class="card-text">
-                                    Un servicio lleno de color y fantasía, con productos suaves y seguros para que cada niño
-                                    brille y disfrute en su ocasión especial.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-------------------------Recomendaciones---------------------------->
-            <div class="col-12 my-4">
-                <section class="recomendaciones">
-                    <h2 class="titulo-recomendaciones">Recomendaciones </h2>
-                    <p> <strong>Despues del corte</strong> :</p>
-                    <ul type="circle">
-                        <li>Evitá lavar el cabello el mismo día, especialmente si se usaron productos de peinado.</li>
-                        <li>Usá un peine de dientes anchos para desenredar sin tirones.</li>
-                        <li>Si el peque es muy chiquito, evita el secador con aire caliente (puede asustarlo o resecarle
-                            el
-                            cuero cabelludo).</li>
-                        <li>Elogiá su nuevo corte para reforzar la experiencia positiva.</li>
-                    </ul>
-                    <p> <strong>Despues del maquillaje o peinado para eventos</strong> :</p>
-                    <ul type="circle">
-                        <li>Retirar el maquillaje con agua tibia y un algodón húmedo o toallita suave.</li>
-                        <li>No usar jabón ni alcohol, ya que puede irritar la piel.</li>
-                        <li>En caso de glitter o gel con brillos, enjuagar con agua y un poco de acondicionador para
-                            facilitar la limpieza.</li>
-                        <li>Evita frotar, la piel infantil es muy sensible.</li>
-                    </ul>
-                    <p> <strong>Consejos generales</strong> :</p>
-                    <ul type="circle">
-                        <li>Cortar el pelo cada 6 a 8 semanas ayuda a mantenerlo sano y prolijo.</li>
-                        <li>Preferí productos suaves, sin sulfatos ni parabenos.</li>
-                        <li>Si el peque teme al corte, podés mostrarle fotos o videos de otros peques felices en la pelu
-                            para que lo viva como un juego.</li>
-                        <li>Siempre avisar si tienen alergias o piel sensible antes de aplicar productos.</li>
-                    </ul>
-                </section>
-            </div>
-
-
+  
         </section>
 
         <footer class="footer">
