Se crean todas las rutas de la web

--- a/servicios.html
+++ b/servicios.html
@@ -48,17 +48,17 @@
                     <a class="nav-link active" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sucursales</a>
+                    <a class="nav-link" href="sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntasF.html">Preguntas Frecuentes</a>
+                    <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tienda</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
