--- a/faqs.html
+++ b/faqs.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav mx-auto px-4 px-sm-4 py-4 py-sm-4">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html">Servicios</a>
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
+                    <a class="nav-link active" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tienda</a>
@@ -63,47 +63,11 @@
         </div>
     </nav>
     <div class="container-fluid p-0 m-0">
-        <div class="row m-0 p-0">
-            <div class="col-12 p-0">
-                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./assets/carousel1.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/carousel2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/carousel3.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/carousel4.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/carousel5.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Anterior </span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Siguiente</span>
-                    </button>
-                </div>
-            </div>
-        </div>
 
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
 
             <div class="col-11 col-md-6 text-center my-4">
-                <h2 class="titulo-servicios">Promociones</h2>
+                <h2 class="titulo-servicios">Preguntas frecuentes</h2>
             </div>
   
         </section>
