Se implementa ruta faqs

--- a/faqs.html
+++ b/faqs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peluca</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="news/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,10 +66,116 @@
 
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
 
+
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="titulo-servicios">Preguntas frecuentes</h2>
+                <p>En <strong>Peluca</strong> Sabemos que antes de venir pueden surgir algunas preguntas.
+        Por eso reunimos las respuestas más importantes para que conozcas cómo trabajamos y qué hace especial la experiencia Peluca.</p>
             </div>
-  
+            <!------ 1 ------>
+            <div class="col-11">
+                <div class="card mb-4 card-horizontal">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./assets/Pregunta1.jpeg" class="img-fluid rounded-start" alt="edades">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¿A partir de qué edad atienden a los niños?</h5>
+                                <p class="card-text">
+                                    En Peluca recibimos a los peques desde su primer corte de cabello y atendemos hasta
+                                    los 10 años. Nuestro equipo está especialmente capacitado para tratar con cada
+                                    etapa, haciendo que la experiencia sea divertida, segura y cómoda para todos.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!------ 2 ------>
+            <div class="col-11">
+                <div class="card mb-4 card-horizontal">
+                    <div class="row g-0 align-items-center flex-md-row-reverse">
+                        <div class="col-md-4">
+                            <img src="./assets/Pregunta2.jpeg" class="img-fluid rounded-start" alt="miedo">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¿Qué pasa si mi hijo tiene miedo o no se deja cortar el pelo?
+                                </h5>
+                                <p class="card-text">
+                                    ¡No hay problema! Nuestros asientos en forma de autos y el ambiente lúdico ayudan a
+                                    que el niño se relaje. Además, contamos con personal paciente y especializado que
+                                    sabe cómo generar confianza. Si es necesario, podés acompañarlo durante todo el
+                                    corte.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!------ 3 ------>
+            <div class="col-11">
+                <div class="card mb-4 card-horizontal">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./assets/Pregunta3.jpeg" class="img-fluid rounded-start" alt="entretenimiento">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¿Tienen un espacio para que los niños jueguen mientras esperan?
+                                </h5>
+                                <p class="card-text">
+                                    Sí 😊. Contamos con un salón de juegos exclusivo, donde los peques pueden
+                                    entretenerse antes o después del corte. Allí hay un empleado asignado que cuida su
+                                    seguridad y supervisa las actividades en todo momento.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!------ 4 ------>
+            <div class="col-11">
+                <div class="card mb-4 card-horizontal">
+                     <div class="row g-0 align-items-center flex-md-row-reverse">
+                         <div class="col-md-4">
+                             <img src="./assets/Pregunta4.jpeg" class="img-fluid rounded-start" alt="productos especiales">
+                         </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¿Usan productos especiales para el cabello de los niños?</h5>
+                                <p class="card-text">
+                                    Sí, trabajamos con productos de alta calidad, suaves y especialmente formulados para
+                                    el cabello infantil. También podés comprarlos en nuestras sucursales para seguir
+                                    cuidando su cabello en casa.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!------ 5 ------>
+            <div class="col-11">
+                <div class="card mb-4 card-horizontal">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./assets/Pregunta5.jpeg" class="img-fluid rounded-start" alt="sucursales">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¿Dónde están ubicadas las sucursales?</h5>
+                                <p class="card-text">
+                                    Actualmente contamos con más de 4 sucursales en San Juan, pensadas para tu
+                                    comodidad. Podés consultar la dirección más cercana en nuestra sección de Sucursales
+                                    o contactarnos por WhatsApp.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <footer class="footer">
