Se hacen mejoras

--- a/servicios.html
+++ b/servicios.html
@@ -67,7 +67,7 @@
 
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="titulo-servicios">Nuestros Servicios</h2>
-                <p class="parrafo-servicio">En <strong>Peluca</strong> En Peluca, entendemos que para muchos padres el
+                <p class="parrafo-servicio">En <strong>Peluca</strong>, entendemos que para muchos padres el
                     momento del corte puede
                     ser un
                     desafío. Por eso transformamos la experiencia en algo completamente diferente: divertido, amable y
@@ -77,11 +77,11 @@
             </div>
             <!-- ...................Nuestros Servicios....................... -->
             <div class="col-12 my-4">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-xl-3 my-4">
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card1.png" class="card-img-top" alt="Corte divertido">
-                            <div class="card-body">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
+                    <div class="col">
+                        <div class="card h-100 mx-auto">
+                            <img src="./assets/Card1.png" class="card-img-top img-fluid" alt="Corte divertido">
+                            <div class="card-body d-flex flex-column">
                                 <p class="card-text"><strong>Corte divertido <br> para niños y niñas</strong></p>
                                 <p class="card-text">Cortes modernos o clásicos en un ambiente alegre, con sillitas
                                     temáticas, dibujos animados y
@@ -89,10 +89,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card2.png" class="card-img-top" alt="Peinados creativos">
-                            <div class="card-body">
+                    <div class="col">
+                        <div class="card h-100 mx-auto">
+                            <img src="./assets/Card2.png" class="card-img-top img-fluid" alt="Peinados creativos">
+                            <div class="card-body d-flex flex-column">
                                 <p class="card-text"><strong>Peinados creativos y trenzas mágicas</strong></p>
                                 <p class="card-text">Trenzas coloridas, moños, purpurina y accesorios divertidos para
                                     ocasiones especiales o para
@@ -100,10 +100,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card3.png" class="card-img-top" alt="Primer corte">
-                            <div class="card-body">
+                    <div class="col">
+                        <div class="card h-100 mx-auto">
+                            <img src="./assets/Card3.png" class="card-img-top img-fluid" alt="Primer corte">
+                            <div class="card-body d-flex flex-column">
                                 <p class="card-text"><strong>Primer corte especial</strong></p>
                                 <p class="card-text">
                                     Un servicio pensado para los más pequeños, con certificado, foto recuerdo y toda la
@@ -113,10 +113,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3 my-4">                         
-                        <div class="card mx-auto" style="width: 18rem;">
-                            <img src="./assets/Card4.png" class="card-img-top" alt="Maquillaje Eventos">
-                            <div class="card-body">
+                    <div class="col">
+                        <div class="card h-100 mx-auto">
+                            <img src="./assets/Card4.png" class="card-img-top img-fluid" alt="Maquillaje Eventos">
+                            <div class="card-body d-flex flex-column">
                                 <p class="card-text"><strong>Maquillaje para Eventos</strong></p>
                                 <p class="card-text">
                                     Un servicio lleno de color y fantasía, con productos suaves y seguros para que cada niño
