--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
                 <div class="d-grid gap-2 ">
-                    <a href="Formulario.html" class=" btn-form text-center" target="_blank">Ir al Formulario</a>
+                    <a href="Formulario.html" class=" btn-form text-center" target="_blank">Pedir Turno</a>
 
                 </div>
             </div>
@@ -65,33 +65,35 @@
     <div class="container-fluid p-0 m-0">
         <div class="row m-0 p-0">
             <div class="col-12 p-0">
-                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                <div id="carousel-modelos" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/carousel1.jpg" class="d-block w-100" alt="...">
+                            <img src="./assets/carousel1.jpg" class="d-block w-100 "
+                                style="object-fit:cover; height: 77vh;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel2.jpg" class="d-block w-100" alt="...">
+                            <img src="./assets/carousel2.jpg" class="d-block w-100 h-60"
+                                style="object-fit:cover; height: 77vh;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel3.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
+                            <img src="./assets/carousel3.jpg" class="d-block w-100 h-60"
+                                style="object-fit:cover; height: 77vh;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel4.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
+                            <img src="./assets/carousel4.jpg" class="d-block w-100 h-60"
+                                style="object-fit:cover; height: 77vh;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/carousel5.jpg" class="d-block w-100 h-60" style="object-fit:cover;"
-                                alt="...">
+                            <img src="./assets/carousel5.jpg" class="d-block w-100 h-60"
+                                style="object-fit:cover; height: 77vh;" alt="...">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-modelos"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Anterior </span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel-modelos"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Siguiente</span>
@@ -102,10 +104,64 @@
 
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
 
-            <div class="col-11 col-md-6 text-center my-4">
-                <h2 class="titulo-servicios">Promociones</h2>
+            <div class="col-11 col-md-11 text-center my-4">
+                <!--.................Quienes somos......................-->
+                <section class="Presentacion"> <!--imagen de fondo-->
+                    <!-- CARD -->
+                    <div class="container my-5">
+                        <div class="card card-quienes-somos mx-auto">
+                            <div class="card-body text-center p-5">
+                                <h2 class="card-title text-quienes">Quiénes somos</h2>
+                                <p class="card-text mt-4">
+                                    En Peluka nacimos de una pasión: el amor por los niños y la dedicación a su
+                                    bienestar. Descubrimos que el mundo de la peluquería infantil era un rubro poco
+                                    explorado, y quisimos crear un espacio pensado especialmente para ellos —un lugar
+                                    donde cortarse el pelo no sea una obligación, sino una experiencia linda y
+                                    divertida.
+                                    Atendemos a niños de 1 a 12 años, pero también pensamos en los padres: queremos que
+                                    sientan confianza y tranquilidad al saber que sus hijos están en manos de un equipo
+                                    profesional, paciente y cariñoso. Nuestro objetivo es que cada visita sea sin
+                                    estrés, segura y llena de sonrisas.
+                                    El ambiente en Peluka es tranquilo y alegre, con colores, juegos y detalles que
+                                    transforman la espera en parte de la diversión. Contamos con sillas temáticas de
+                                    autos y una sala de juegos para que los peques se entretengan mientras esperan su
+                                    turno. Además, ofrecemos productos de cuidado capilar de calidad, especialmente
+                                    diseñados para el cabello de los niños.
+                                    Somos un equipo de cuatro profesionales más un cuidador que acompaña y asiste a los
+                                    pequeños durante su visita. Trabajamos con cariño, paciencia y respeto, priorizando
+                                    siempre la seguridad, la higiene y la comodidad de cada niño.
+                                    En Peluka creemos que la confianza de los padres y la alegría de los niños son la
+                                    mejor recompensa.
+                                    ✨ Peluka: donde cada corte se convierte en una sonrisa.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
             </div>
-  
+            
+                <div class="card mb-4 card-horizontal col-11 px-0">
+                    <div class="row g-0 align-items-center flex-row-reverse">
+                        <!-- Imagen a la derecha -->
+
+                        <div class="col-md-6 col-lg-4 mr-md-3">
+                            <img src="./assets/promo.png" class="img-fluid rounded-end card-img" alt="miedo">
+                        </div>
+                        <div class="col-md-6 col-lg-8">
+                            <div class="card-body">
+                                <h5 class="card-title">¡Promo especial de noviembre!</h5>
+                                <p class="card-text">
+                                    <strong>2x1 en cortes infantiles</strong> durante todo el mes. Vení con tu peque y
+                                    su mejor amigo o hermano ¡y uno de los cortes va por nuestra cuenta!
+                                </p>
+                                <p class="card-text">
+                                    Promoción válida hasta el 30 de noviembre. No acumulable con otras ofertas.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
+
         </section>
 
         <footer class="footer">
