--- a/Formulario.html
+++ b/Formulario.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservar turno | Peluca</title>
-  <link rel="stylesheet" href="turno.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
