--- a/faqs.html
+++ b/faqs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peluca</title>
+    <title>Peluka</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -20,7 +20,7 @@
                 <div class="d-flex justify-content-start align-items-center">
                     <img src="./assets/Logo1.png" alt="Logo" width="auto" height="120">
                     <div class="pt-5">
-                        <p class="nombre"> Peluca </p>
+                        <p class="nombre"> Peluka </p>
                         <p class="negocio"> Peluqueria Infantil </p>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
 
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="titulo-servicios">Preguntas frecuentes</h2>
-                <p>En <strong>Peluca</strong> Sabemos que antes de venir pueden surgir algunas preguntas.
-        Por eso reunimos las respuestas más importantes para que conozcas cómo trabajamos y qué hace especial la experiencia Peluca.</p>
+                <p>En <strong>Peluka</strong> Sabemos que antes de venir pueden surgir algunas preguntas.
+        Por eso reunimos las respuestas más importantes para que conozcas cómo trabajamos y qué hace especial la experiencia Peluka.</p>
             </div>
             <!------ 1 ------>
             <div class="col-11">
@@ -83,7 +83,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">¿A partir de qué edad atienden a los niños?</h5>
                                 <p class="card-text">
-                                    En Peluca recibimos a los peques desde su primer corte de cabello y atendemos hasta
+                                    En Peluka recibimos a los peques desde su primer corte de cabello y atendemos hasta
                                     los 10 años. Nuestro equipo está especialmente capacitado para tratar con cada
                                     etapa, haciendo que la experiencia sea divertida, segura y cómoda para todos.
                                 </p>
@@ -181,14 +181,14 @@
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-info">
-                    <h3>Peluca ✂️</h3>
+                    <h3>Peluka ✂️</h3>
                     <p>Peluquería infantil con amor, paciencia y mucha diversión.</p>
                 </div>
 
                 <div class="footer-contact">
                     <p><strong>📍 Dirección:</strong> Av. Sonrisas 123, Ciudad Feliz</p>
                     <p><strong>📞 Teléfono:</strong> +54 9 11 1234-5678</p>
-                    <p><strong>📧 Email:</strong> contacto@peluca.com</p>
+                    <p><strong>📧 Email:</strong> contacto@peluka.com</p>
                 </div>
 
                 <div class="footer-social">
@@ -202,7 +202,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>© 2025 Peluca. Todos los derechos reservados.</p>
+                <p>© 2025 Peluka. Todos los derechos reservados.</p>
             </div>
         </footer>
     </div>
