Se implementa  ruta de sucursales

--- a/sucursales.html
+++ b/sucursales.html
@@ -63,13 +63,113 @@
         </div>
     </nav>
     <div class="container-fluid p-0 m-0">
-
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
 
             <div class="col-11 col-md-6 text-center my-4">
-                <h2 class="titulo-servicios">Sucursales</h2>
+                <h2 class="mb-4 text-center text-quienes">Nuestras Sucursales</h2>
+                <p class="text-center card-text mb-4">Cuatro ubicaciones en los principales shoppings y paseos. Haga
+                    clic en "Ver en mapa" para abrir la ubicación.</p>
             </div>
-  
+
+            <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
+                <!-- Card 1 -->
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="card h-100 mx-auto">
+                            <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz6ZPuR94kS5-O6jlRl2UmakR4AtUDUnlGUxxdbGefwM5XuzJ9RF7mvUthU7nFDKCHJgqGGEPesx1Kx7sieMRVhER3AEfZ3Fi9MKhXZZx9fbXqa8FLIvNJfl17fl3TFRDCtAA1J=s680-w680-h510-rw"
+                                class="card-img-top object-fit-cover" alt="Sucursal 1 - Shopping A">
+                            <div class="card-body d-flex flex-column">
+                                <p class="card-text"><strong>Corte divertido <br> para niños y niñas</strong></p>
+                                <h3 class="h5 card-title">Patio Alvear Shopping</h3>
+                                <p class="mb-1 small text-muted">Local Comercial: 11</p>
+                                <p class="mb-1"><strong>Dirección:</strong> Av. Libertador Gral. San Martín 1826, San
+                                    Juan</p>
+                                <p class="mb-1"><strong>Horario:</strong> Lun a Dom 10:00 – 21:00</p>
+                                <p class="mb-2"><strong>Tel:</strong> (0264) 123-4567</p>
+                                <div class="mt-auto">
+                                    <a href="https://www.google.com/maps" target="_blank" rel="noopener"
+                                        class="btn btn-outline-primary btn-sm w-100">Ver en mapa</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <article class="card h-100 shadow-sm">
+                            <div class="ratio ratio-16x9">
+                                <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyNALTOyKL0zC-UJqqsz_ZUWt6C_038gehRStYv_LKa0EqqtXRh7JqJtREzLP2X3uPJaq01u478eWekJT5_Fz-4AWs8BKGhOYV6-QmkBse8-ih2UkAykED2JY3qK2HM0d8uXOaYeQ=s680-w680-h510-rw"
+                                    class="card-img-top object-fit-cover" alt="Sucursal 2 - Paseo B">
+                            </div>
+                            <div class="card-body d-flex flex-column">
+                                <h3 class="h5 card-title">Espacio San Juan</h3>
+                                <p class="mb-1 small text-muted">Local Comercial: 22</p>
+                                <p class="mb-1"><strong>Dirección:</strong> Av. José Ignacio de la Roza Oeste 806, San
+                                    Juan</p>
+                                <p class="mb-1"><strong>Horario:</strong> Lun a Vie 9:30 – 20:30</p>
+                                <p class="mb-2"><strong>Tel:</strong> (0264) 234-5678</p>
+                                <div class="mt-auto">
+                                    <a href="https://www.google.com/maps" target="_blank" rel="noopener"
+                                        class="btn btn-outline-primary btn-sm w-100">Ver en mapa</a>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <article class="card h-100 shadow-sm">
+                            <div class="ratio ratio-16x9">
+                                <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyeTfuIyLe2hAhDpHgFid_NuL99QFlAKspNRNDCUOXayjbKPM8eQYE93oEWFoG6ntWg1Y3wZkP_2Ej5rl5bc-Rlz0e_uIPTx_Yrmoe00TE2yEwHtCeQXWKeejORtbmcE1b1hWMo=s680-w680-h510-rw"
+                                    class="card-img-top object-fit-cover" alt="Sucursal 3 - Shopping C">
+                            </div>
+                            <div class="card-body d-flex flex-column">
+                                <h3 class="h5 card-title">Paseo Libertad</h3>
+                                <p class="mb-1 small text-muted">Local Comercial: 33</p>
+                                <p class="mb-1"><strong>Dirección:</strong> Av. Circunvalación, Scalabrini Ortiz Nte. &,
+                                    San Juan</p>
+                                <p class="mb-1"><strong>Horario:</strong> Sáb y Dom 11:00 – 22:00</p>
+                                <p class="mb-2"><strong>Tel:</strong> (0264) 345-6789</p>
+                                <div class="mt-auto">
+                                    <a href="https://www.google.com/maps" target="_blank" rel="noopener"
+                                        class="btn btn-outline-primary btn-sm w-100">Ver en mapa</a>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <article class="card h-100 shadow-sm">
+                            <div class="ratio ratio-16x9">
+                                <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz3S4Al8THMLWHhWQhG3-SCXYB6XNwPp1fwqXTZstiHyXkcdjG5o4w4vjD591nDPnq1EvT3cHTTE5j0P-i9ikuuCAfPK2VZ_gaxXrv-Ee0STROgeRbdcE7OC7WabCRDUMH9S7IMaA=s680-w680-h510-rw"
+                                    class="card-img-top object-fit-cover" alt="Sucursal 4 - Paseo D">
+                            </div>
+                            <div class="card-body d-flex flex-column">
+                                <h3 class="h5 card-title">Shopping Alto del Bono</h3>
+                                <p class="mb-1 small text-muted">Local Comercial: 5</p>
+                                <p class="mb-1"><strong>Dirección:</strong> Av. José Ignacio de la Roza Oeste 2100, San
+                                    Juan</p>
+                                <p class="mb-1"><strong>Horario:</strong> Lun a Dom 10:00 – 22:00</p>
+                                <p class="mb-2"><strong>Tel:</strong> (0264) 456-7890</p>
+                                <div class="mt-auto">
+                                    <a href="https://www.google.com/maps" target="_blank" rel="noopener"
+                                        class="btn btn-outline-primary btn-sm w-100">Ver en mapa</a>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                
+
+                <!-- Opcional: enlace a vista con mapa (Google Maps con marcadores) -->
+                
+            </div>
+
+            <div class="col-11 col-md-6 my-4">
+               <div class="text-center mt-4">
+                    <a href="#" class="btn btn-primary">Ver todas en el mapa</a>
+                </div>
+            </div>
+
         </section>
 
         <footer class="footer">
