Correcciones de estilos

--- a/faqs.html
+++ b/faqs.html
@@ -54,19 +54,13 @@
                     <a class="nav-link active" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link disabled" href="#">Tienda</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
-                </li> -->
             </ul>
         </div>
     </nav>
     <div class="container-fluid p-0 m-0">
-
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
-
-
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="titulo-servicios">Preguntas frecuentes</h2>
                 <p>En <strong>Peluka</strong> Sabemos que antes de venir pueden surgir algunas preguntas.
@@ -175,9 +169,7 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-info">
