--- a/index.html
+++ b/index.html
@@ -55,11 +55,8 @@
                     <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link disabled" href="#">Tienda</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
-                </li> -->
             </ul>
         </div>
     </nav>
