--- a/servicios.html
+++ b/servicios.html
@@ -28,7 +28,6 @@
             <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
                 <div class="d-grid gap-2 ">
                     <a href="Formulario.html" class=" btn-form text-center" target="_blank">Ir al Formulario</a>
-
                 </div>
             </div>
         </div>
@@ -54,17 +53,13 @@
                     <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link disabled" href="#">Tienda</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
-                </li> -->
             </ul>
         </div>
     </nav>
     <div class="container-fluid p-0 m-0">
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
-
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="titulo-servicios">Nuestros Servicios</h2>
                 <p class="parrafo-servicio">En <strong>Peluka</strong>, entendemos que para muchos padres el
@@ -75,7 +70,6 @@
                     estrés. Nuestro equipo está especialmente capacitado para atender a los más chicos con paciencia,
                     ternura y una sonrisa, creando un ambiente donde el juego y la creatividad son protagonistas.</p>
             </div>
-            <!-- ...................Nuestros Servicios....................... -->
             <div class="col-12 my-4">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
                     <div class="col">
@@ -127,7 +121,6 @@
                     </div>
                 </div>
             </div>
-            <!-------------------------Recomendaciones---------------------------->
             <div class="col-12 my-4">
                 <section class="recomendaciones">
                     <h2 class="titulo-recomendaciones">Recomendaciones </h2>
@@ -158,10 +151,7 @@
                     </ul>
                 </section>
             </div>
-
-
         </section>
-
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-info">
