--- a/sucursales.html
+++ b/sucursales.html
@@ -28,7 +28,6 @@
             <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
                 <div class="d-grid gap-2 ">
                     <a href="Formulario.html" class=" btn-form text-center" target="_blank">Ir al Formulario</a>
-
                 </div>
             </div>
         </div>
@@ -54,24 +53,22 @@
                     <a class="nav-link " href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link disabled" href="#">Tienda</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container-fluid p-0 m-0">
         <section class="row align-items-center justify-content-center servicios m-0 p-0 ">
-
             <div class="col-11 col-md-6 text-center my-4">
                 <h2 class="mb-4 text-center text-quienes">Nuestras Sucursales</h2>
                 <p class="text-center card-text mb-4">Cuatro ubicaciones en los principales shoppings y paseos. Haga
                     clic en "Ver en mapa" para abrir la ubicación.</p>
             </div>
-
-            <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4 mb-3">
                 <!-- Card 1 -->
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="card h-100 mx-auto">
+                    <div class="card h-100 mx-auto border-0">
                         <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz6ZPuR94kS5-O6jlRl2UmakR4AtUDUnlGUxxdbGefwM5XuzJ9RF7mvUthU7nFDKCHJgqGGEPesx1Kx7sieMRVhER3AEfZ3Fi9MKhXZZx9fbXqa8FLIvNJfl17fl3TFRDCtAA1J=s680-w680-h510-rw"
                             class="card-img-top object-fit-cover" alt="Sucursal 1 - Shopping A">
                         <div class="card-body d-flex flex-column">
@@ -91,7 +88,7 @@
 
                 <!-- Card 2 -->
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="card h-100 mx-auto">
+                    <div class="card h-100 mx-auto border-0">
                         <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyNALTOyKL0zC-UJqqsz_ZUWt6C_038gehRStYv_LKa0EqqtXRh7JqJtREzLP2X3uPJaq01u478eWekJT5_Fz-4AWs8BKGhOYV6-QmkBse8-ih2UkAykED2JY3qK2HM0d8uXOaYeQ=s680-w680-h510-rw"
                             class="card-img-top object-fit-cover" alt="Sucursal 2 - Espacio San Juan">
                         <div class="card-body d-flex flex-column">
@@ -111,7 +108,7 @@
 
                 <!-- Card 3 -->
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="card h-100 mx-auto">
+                    <div class="card h-100 mx-auto border-0">
                         <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyeTfuIyLe2hAhDpHgFid_NuL99QFlAKspNRNDCUOXayjbKPM8eQYE93oEWFoG6ntWg1Y3wZkP_2Ej5rl5bc-Rlz0e_uIPTx_Yrmoe00TE2yEwHtCeQXWKeejORtbmcE1b1hWMo=s680-w680-h510-rw"
                             class="card-img-top object-fit-cover" alt="Sucursal 3 - Paseo Libertad">
                         <div class="card-body d-flex flex-column">
@@ -132,7 +129,7 @@
 
                 <!-- Card 4 -->
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="card h-100 mx-auto">
+                    <div class="card h-100 mx-auto border-0">
                         <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz3S4Al8THMLWHhWQhG3-SCXYB6XNwPp1fwqXTZstiHyXkcdjG5o4w4vjD591nDPnq1EvT3cHTTE5j0P-i9ikuuCAfPK2VZ_gaxXrv-Ee0STROgeRbdcE7OC7WabCRDUMH9S7IMaA=s680-w680-h510-rw"
                             class="card-img-top object-fit-cover" alt="Sucursal 4 - Shopping Alto del Bono">
                         <div class="card-body d-flex flex-column">
@@ -144,21 +141,18 @@
                             <p class="mb-2"><strong>Tel:</strong> (0264) 456-7890</p>
                             <div class="mt-auto">
                                 <a href="https://www.google.com/maps" target="_blank" rel="noopener"
-                                    class="btn btn-outline-warning btn-sm w-100">Ver en mapa</a>
+                                    class="btn btn-outline-primary btn-sm w-100">Ver en mapa</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="col-11 col-md-6 my-4">
-                <div class="text-center mt-4">
-                    <a href="#" class=" btn-form text-center">Ver todas en el mapa</a>
+            <div class="col-11 col-md-6 my-5">
+                <div class="text-center mb-5">
+                    <a href="#" class="btn-form">Ver todas en el mapa</a>
                 </div>
             </div>
-
         </section>
-
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-info">
